# nexus

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  aj-sr04.cpp  aj-sr04.html  aj-sr04.py  fs50l.cpp  fs50l.html  fs50l.py  modbus_encode.cpp  modbus_encode.py  pzem-004t.cpp  pzem-004t.html  pzem-004t.py  shzk.cpp  shzk.html  shzk.py  urm15.cpp  urm15.html  urm15.py  version.cpp  version.py
docs/: CMakeLists.txt  Doxyfile.in
include/nexus/: version.h
include/nexus/abstract/: c_wrapper.h  client.h  codec.h  communication.h  device.h  listener.h  restful.h  serial.h
include/nexus/http/: c_wrapper.h  client.h  http.h  request.h  response.h  server.h
include/nexus/modbus/: api.h  api_client.h  api_server.h
include/nexus/modbus/rtu/: c_wrapper.h  client.h  server.h
include/nexus/modbus/tcp/: client.h  server.h
include/nexus/serial/: c_wrapper.h  hardware.h  serial.h  software.h  software_serial.h
include/nexus/tcp/: c_wrapper.h  client.h  server.h
include/nexus/tools/: await.h  byte_view.h  check_index.h  detect_virtual_comm.h  filesystem.h  json.h  on_kill.h  options.h  timestamp.h  to_string.h
pybind/: CMakeLists.txt  get_python_packages_dir.py  pybind.h  python_bindings.cpp
pybind/abstract/: client.cpp  codec.cpp  communication.cpp  device.cpp  listener.cpp  restful.cpp  serial.cpp
pybind/http/: client.cpp  request.cpp  response.cpp  server.cpp
pybind/modbus/: api.cpp
pybind/modbus/rtu/: client.cpp  server.cpp
pybind/modbus/tcp/: client.cpp  server.cpp
pybind/serial/: hardware.cpp  serial.cpp  software.cpp
pybind/tcp/: client.cpp  server.cpp
pybind/tools/: baud_rate.cpp  byte_view.cpp  content_type.cpp
src/: version.cpp
src/abstract/: client.cpp  codec.cpp  communication.cpp  device.cpp  helper.ipp  listener.cpp  restful.cpp  serial.cpp
src/http/: client.cpp  request.cpp  response.cpp  server.cpp
src/modbus/: api.cpp  api_client.cpp  api_server.cpp
src/modbus/rtu/: c_wrapper.cpp  client.cpp  server.cpp
src/modbus/tcp/: client.cpp  server.cpp
src/serial/: c_wrapper.cpp  hardware.cpp  serial.cpp  software.cpp
src/tcp/: c_wrapper.cpp  client.cpp  server.cpp
test/: CMakeLists.txt  crc.cpp  main.cpp  main.py  test2.py
test/http/: c_server.c  cserver.c  server.cpp  server.py
test/modbus/: crc.cpp  tcp.cpp  tcp.py
test/serial/: c_serial.c  communication.cpp  serial.cpp  serial.py
test/tcp/: c_server.c  cserver.c  server.cpp  server.py
test/tools/: byte_view.cpp  byte_view.py  json.cpp  to_string.cpp
